--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@fortawesome/angular-fontawesome": "^0.6.0",
+    "@ngrx/effects": "^9.0.0",
+    "@ngrx/router-store": "^9.0.0",
+    "@ngrx/store": "^9.0.0",
+    "@ngrx/store-devtools": "^9.0.0",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
