--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "karma-mocha-reporter": "^2.2.5",
     "rxjs": "~6.3.3",
     "tslib": "^1.11.1",
     "zone.js": "~0.8.26"
